# huginn

./: Cargo.toml  README.md
courses/: icelandic.yaml
src/: challenge.rs  course.rs  exercise.rs  lesson.rs  main.rs
src/static_files/: mod.rs
src/static_files/css/: application.css  application.sass
src/static_files/html/: course_show.html  index.html  practice.html
src/static_files/js/: application.js  vue.debug.js
