[package]
name = "huginn"
version = "0.1.0"
authors = ["Alex Pécsi <alex.pecsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "*"
actix-rt = "*"
actix-service = "*"
actix-session = "*"
actix-web = "2.*"
rand = "*"
serde = "*"
serde_yaml = "*"
