[package]
name = "huginn"
version = "0.1.0"
authors = ["Alex Pécsi <alex.pecsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "*"
actix-rt = "1"
actix-service = "*"
actix-session = "*"
actix-web = "2"
c2-chacha = "*"
chrono = { version = "*", features = [ "serde"] }
rand = "*"
serde = "*"
serde_yaml = "*"
sha1 = "*"
