[package]
name = "huginn"
version = "0.1.0"
authors = ["Alex Pécsi <alex.pecsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "*"
actix-rt = "1"
actix-service = "*"
actix-session = "*"
actix-web = "2"
aes = "*"
base64 = "*"
block-modes = "*"
chrono = { version = "*", features = [ "serde"] }
env_logger = "*"
rand = "*"
serde = "*"
serde_yaml = "*"
sha2 = "*"
